# FPGA-partition

./: .clang-format  CMakeLists.txt  README.md  README_edif.md
data/: 数据开源声明（赛题三）.txt
data/case05/: design.are  design.info  design.net  design.topo
data/case06/: design.are  design.info  design.net  design.topo
data/case08/: design.are  design.info  design.net  design.topo
data/case09/: design.info  design.topo
data/case10/: design.info
examples/: map_hypergraph_onto_target_graph.cc
include/: io.h  libmtkahypar.h  libmtkahypartypes.h  partition.h  util.h  utils.h
scripts/: evaluate.sh  mt_run.sh  run.sh  run_mt.sh  scp.sh  update.sh
src/: io.cpp  main.cpp  main_edif.cpp
